# cppQuery

./: .gitignore  CMakeLists.txt  README.MD
_public/: index.html
includes/: cppQuery.hpp
sources/: cppQuery.cpp  main.cpp
