cmake_minimum_required(VERSION  3.8)
project(wasm-dom)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/_public/bundle)

set(EMSCRIPTEN_PATH $ENV{HOME}/.emsdk/upstream/emscripten) # CHANGE THIS

set(CMAKE_C_COMPILER "${EMSCRIPTEN_PATH}/emcc")
set(CMAKE_CXX_COMPILER "${EMSCRIPTEN_PATH}/em++")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lembind")
set(SOURCE_DIRECTORY ${CMAKE_SOURCE_DIR}/sources)
set(INCLUDE_DIRECTORY ${CMAKE_SOURCE_DIR}/includes)
set(VENDORS_DIRECTORY ${CMAKE_SOURCE_DIR}/vendors)

file(GLOB_RECURSE SOURCE_FILES ${SOURCE_DIRECTORY}/*.cpp)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "wasm-dom" SUFFIX ".js")

target_link_libraries(${PROJECT_NAME} c++)

include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIRECTORY} ${VENDORS_DIRECTORY})
